--- a/src/server/views/secondaryTables.html
+++ b/src/server/views/secondaryTables.html
@@ -161,7 +161,7 @@
                         <tbody>
 
                         {% for geo in all.geos %}
-                        <tr id="{{geo.Platform}}" class="geoRow">
+                        <tr id="{{geo.iso}}" class="geoRow">
                             <td> {{geo.Country}}</td>
                             <td> {{geo.day_1_Revenue}}</td>
                             <td> {{geo.day_2_Revenue}}</td>
